@@ -5,6 +5,9 @@
 2. Apply some Fedora patches.
 3. Fix MPD HTTP stream playback.
 4. Fix painting of Gtk thin scrollbar style on comboboxes.
+5. When waiting for replies from MPD, use Qt's standard timeout value of 30s.
+   While the socket is still connected, Cantata will wait up to 4 times the
+   timeout value. Therefore, the actual timeout has increased to 2minutes!
 
 1.3.0.1
 -------
